[package]
name = "rx-parity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-stream = "0.3.3"
futures = "0.3.24"
# futures-util = "0.3.24"
pin-project-lite = "0.2.9"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }

[dev-dependencies]
